# info-extraction-project-1

hw1/: .gitignore  CMakeLists.txt  HMM.cpp  HMM.hpp  plot.py
hw1/include/: HMM.hpp
hw1/src/: HMM.cpp  main.cpp
